# snakemake-storage-plugin-apd

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release-please.yml
src/snakemake_storage_plugin_apd/: __init__.py
