[project]
name = "snakemake-storage-plugin-apd"
dynamic = ["version"]
description = "A Snakemake storage plugin for the LHCb apd API."
authors = [
    {name = "Chris Burr", email = "christopher.burr@cern.ch"},
    {name = "Matthew Monk", email = "matthew.david.monk@cern.ch"}
]
readme = "README.md"
dependencies = [
  "snakemake-interface-common >=1.15.0,<2",
  "snakemake-interface-storage-plugins >=3,<4",
  "xrootd >=5.6,<6",
  "snakemake >=8.18,<9",
  "apd >=0.8.1,<1.0"
]
requires-python = ">= 3.11"

[project.urls]
"Source code" = "https://github.com/snakemake/snakemake-storage-plugin-apd"
Documentation = "https://snakemake.github.io/snakemake-plugin-catalog/plugins/storage/apd.html"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[dependency-groups]
test = ["pytest", "coverage"]

[tool.hatch.version]
source = "vcs"

[tool.pixi.project]
channels = ["conda-forge", "bioconda"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.dependencies]
xrootd = ">=5.7.3,<6"

[tool.pixi.pypi-dependencies]
snakemake-storage-plugin-apd = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
# test = { features = ["test"], solve-group = "default" }

# [tool.pixi.feature.test.tasks]
# test = "pytest -vv tests/tests.py"
# test-coverage = "coverage run -m pytest -vv tests/tests.py"
# coverage-report = "coverage report"
